--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Nome do Aluno(a) (oas)</p>
+        <p>Desenvolvido por Erica Souza e Juliana Aparecida </p>
     </footer>
 
     <script type="module" src="graficos/common.js"></script>
